  The key to specify the DNS is 'issuedhash-dsn' in 'authentication' key, or $issuedHashDSN in params.php.
- Customize the navigation bar with INTERMediator.navigationSetup = function(){...}.
  You can modify the already existing method as you like.
- The moving page control to the navigation bar (Thanks to Mr. Ito).
- MediaAccess class can work for the FileMaker Native Authentication.
- [BUG FIX] Fix compatibility with Internet Explorer 8 which can't always call console.log() and console.error().
- [BUG FIX] "Insert" button for SPAN/DIV repeaters didn't appear.
- [BUG FIX] Fix missing selected attribute of option tag to modify compatibility with Firefox.

Ver.3.7 (2013/7/28)
- Check required PHP extensions (mbstring and OpenSSL), especially on Windows.
- MediaAccess class can work for a non-authentication settings.
- FileMaker's container fields supported.
- Check non-exists field name in a page file on the debug mode and a query access.
- Output X-Frame-Options and X-Content-Type-Options response headers.
- Native Authentication doesn't require the OpenSSL module, and works on PHP 5.2.
- The 'phpseclib(http://phpseclib.sourceforge.net/)' is contained in the INTER-Mediator
- The Definition File Editor gets started to develop, but it can show the contents so far.
  You can see the link to the def-file editor at the top of debug messages.
- The "Insert" button can be placed at the top of repeaters by "insert-top"/"insert-top-confirm".
- [SECURITY FIX] Fix DOM based XSS security issue in INTERMediatorCheckBrowser function.
- [BUG FIX] FileMaker Native Authentication bugs fixed.
- [BUG FIX] DB_PDO class didn't affect the limitation number of querying.
- [BUG FIX] If the name of context was same as JS function name, the error happened.
- [BUG FIX] The "Insert" button might be placed the inside table.
            (The following long time bug comes from the same reason.)